--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React</title>
 </head>
 
-<body class="bg-blue-600">
+<body class="bg-zinc-800 text-zinc-50">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
